--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,83 +1,40 @@
-name: Build Sonic Nexus for multiple platforms
+name: Build Sonic Nexus for vita
 
 on:
   push:
     branches:
-      - master
-      - continuous-delivery
+      - vita
 
 jobs:
-  windows:
-    runs-on: windows-2022
+  psvita:
+    runs-on: ubuntu-latest
+    container: vitasdk/vitasdk:latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
-      - name: Download libogg, libvorbis, and libtheora for easier includes
-        run : |
-          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/ogg/libogg-1.3.5.zip" -OutFile "libogg.zip"
-          Expand-Archive -Path libogg.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/libogg-1.3.5 libogg
-          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/vorbis/libvorbis-1.3.7.zip" -OutFile "libvorbis.zip"
-          Expand-Archive -Path libvorbis.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/libvorbis-1.3.7 libvorbis
-      - name: Download SDL2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: apk add --no-cache make cmake
+      - name: Get SDL2
         run: |
-          Invoke-WebRequest -Uri "https://libsdl.org/release/SDL2-devel-2.0.14-VC.zip" -OutFile "SDL2.zip"
-          Expand-Archive -Path SDL2.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/SDL2-2.0.14 SDL2
-      - name: Run vcpkg
+          wget https://github.com/rsn8887/SDL-Vita/releases/download/2.0.8dev_vita_rsn8887_git_20180523/sdl2_vita_20180523.tar.xz
+          mkdir -p dependencies/vita/sdl2
+          tar -xf sdl2_vita_20180523.tar.xz -C dependencies/vita/sdl2
+      - name: Get and compile libtheora
         run: |
-          vcpkg install libogg:x86-windows-static libvorbis:x86-windows-static libtheora:x86-windows-static
-          vcpkg integrate install
+          wget https://downloads.xiph.org/releases/theora/libtheora-1.1.1.tar.bz2 && \
+          tar -xf libtheora-1.1.1.tar.bz2 -C dependencies/vita && \
+          mv dependencies/vita/libtheora-1.1.1 dependencies/vita/libtheora
+          cd dependencies/vita/libtheora
+          ./configure --host=arm-vita-eabi --prefix=${VITASDK}/arm-vita-eabi --disable-shared --enable-static --disable-spec --disable-examples
+          make install
       - name: Build Sonic Nexus
         run: |
-          msbuild Nexus.sln /p:Configuration=Release /p:Platform=x86 /p:ForceImportBeforeCppTargets="$env:GITHUB_WORKSPACE/props/winactions.props"
-      - name: Move artifacts
-        run: |
-          mkdir artifacts
-          move ./build/Win32/Release/*.dll ./artifacts 
-          move ./build/Win32/Release/*.exe ./artifacts
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v1.0.0  
+          cd Nexus.vita
+          cmake .
+          make
+      - name: Upload VPK
+        uses: actions/upload-artifact@v2
         with:
-          name: Nexus-Windows 
-          path: artifacts      
-  windows-x64:
-    runs-on: windows-2022
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
-      - name: Download libogg, libvorbis, and libtheora for easier includes
-        run : |
-          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/ogg/libogg-1.3.5.zip" -OutFile "libogg.zip"
-          Expand-Archive -Path libogg.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/libogg-1.3.5 libogg
-          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/vorbis/libvorbis-1.3.7.zip" -OutFile "libvorbis.zip"
-          Expand-Archive -Path libvorbis.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/libvorbis-1.3.7 libvorbis
-      - name: Download SDL2
-        run: |
-          Invoke-WebRequest -Uri "https://libsdl.org/release/SDL2-devel-2.0.14-VC.zip" -OutFile "SDL2.zip"
-          Expand-Archive -Path SDL2.zip -DestinationPath ./dependencies/windows/
-          Rename-Item ./dependencies/windows/SDL2-2.0.14 SDL2
-      - name: Run vcpkg
-        run: |
-          vcpkg install libogg:x64-windows-static libvorbis:x64-windows-static libtheora:x64-windows-static
-          vcpkg integrate install
-      - name: Build Sonic Nexus
-        run: |
-          msbuild Nexus.sln /p:Configuration=Release /p:Platform=x64 /p:ForceImportBeforeCppTargets="$env:GITHUB_WORKSPACE/props/winactions_x64.props"
-      - name: Move artifacts
-        run: |
-          mkdir artifacts
-          move ./build/x64/Release/*.dll ./artifacts 
-          move ./build/x64/Release/*.exe ./artifacts
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v1.0.0  
-        with:
-          name: Nexus-Windows-x64 
-          path: artifacts     
+          name: SonicNexus-vita
+          path: Nexus.vita/SonicNexus.vpk
+          if-no-files-found: error
