somewhat of a rewrite I think

--- a/Nexus.vita/CMakeLists.txt
+++ b/Nexus.vita/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 
 ## Define project parameters here
 # Name of the project
-project(Sonic Nexus)
+project(Nexus)
 # This line adds Vita helper macros, must go after project definition in order
 # to build Vita specific artifacts (self/vpk).
 include("${VITASDK}/share/vita.cmake" REQUIRED)
@@ -25,22 +25,21 @@ include("${VITASDK}/share/vita.cmake" REQUIRED)
 set(VITA_APP_NAME "Sonic Nexus")
 # Unique ID must be exactly 9 characters. Recommended: XXXXYYYYY where X =
 # unique string of developer and Y = a unique number for this app
-set(VITA_TITLEID  "RSDK20001")
+set(VITA_TITLEID  "RSDK00000")
 # Optional version string to show in LiveArea's more info screen
-set(VITA_VERSION  "01.00")
+set(VITA_VERSION  "1.0.0")
 
 ## Flags and includes for building
 # Note that we make sure not to overwrite previous flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3 -fsigned-char -fno-lto")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -fsigned-char -fno-lto -fno-rtti -fexceptions")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -fsigned-char -fno-lto -fno-rtti -fno-exceptions")
 # Optional. You can specify more param.sfo flags this way.
 set(VITA_MKSFOEX_FLAGS "${VITA_MKSFOEX_FLAGS} -d PARENTAL_LEVEL=1")
 
-add_compile_definitions(USE_SW_REN)
-
 # Add any additional include paths here
 include_directories(
-  ../dependencies/windows/theoraplay
+  ../dependencies/all/theoraplay
+  ../dependencies/all/tinyxml2
   /home/user/vitasdk/arm-vita-eabi/include
 )
 
@@ -51,10 +50,30 @@ link_directories(
 )
 
 ## Build and link
-file(GLOB_RECURSE SOURCES ../Nexus/*.cpp)
+# Add all the files needed to compile here
 add_executable(${PROJECT_NAME}
-  ${SOURCES}
-  ../dependencies/windows/theoraplay/theoraplay.c
+    ../dependencies/all/theoraplay/theoraplay.c
+   ../Nexus/Animation.cpp 
+   ../Nexus/Audio.cpp 
+   ../Nexus/Collision.cpp 
+   ../Nexus/Debug.cpp 
+   ../Nexus/Drawing.cpp 
+   ../Nexus/Ini.cpp 
+   ../Nexus/Input.cpp 
+   ../Nexus/main.cpp 
+   ../Nexus/Math.cpp 
+   ../Nexus/Object.cpp 
+   ../Nexus/Palette.cpp 
+   ../Nexus/Player.cpp 
+   ../Nexus/Reader.cpp 
+   ../Nexus/RetroEngine.cpp 
+   ../Nexus/Scene.cpp 
+   ../Nexus/Script.cpp 
+   ../Nexus/Sprite.cpp 
+   ../Nexus/String.cpp 
+   ../Nexus/Text.cpp 
+   ../Nexus/Userdata.cpp 
+   ../Nexus/Video.cpp
 )
 
 # Library to link to (drop the -l prefix). This will mostly be stubs.
@@ -65,6 +84,8 @@ target_link_libraries(${PROJECT_NAME}
   vorbis
   ogg
   theora
+  glew
+  tinyxml2
   pthread
   SceDisplay_stub
   SceAudio_stub
