--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
-name: Build Sonic Nexus for PsVita
+name: Build Sonic Nexus
 
 on:
   push:
     branches:
-      - vita
+      - main
+      - psvita
 
 jobs:
   psvita:
@@ -13,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: apk add --no-cache make cmake libtheora-dev libogg-dev libvorbis-dev libsdl2-dev libglew-dev
+        run: apk add --no-cache make cmake
       - name: Get SDL2
         run: |
           wget https://github.com/rsn8887/SDL-Vita/releases/download/2.0.8dev_vita_rsn8887_git_20180523/sdl2_vita_20180523.tar.xz
@@ -36,5 +37,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: SonicNexus-vita
-          path: Nexus.vita/SonicNexus.vpk
+          path: Nexus.vita/SonicCD.vpk
           if-no-files-found: error
