--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,9 @@
-name: Build Sonic Nexus
+name: Build Sonic Nexus for Vita
 
 on:
   push:
     branches:
-      - psvita
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+      - vita
 
 jobs:
   psvita:
@@ -39,5 +36,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: SonicNexus-vita
-          path: Nexus.vita/SonicCD.vpk
+          path: Nexus.vita/SonicNexus.vpk
           if-no-files-found: error
