--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 name: Build Sonic Nexus for Vita
 
-on:
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches:
-      - vita
+    branches: [ vita ]
+  pull_request:
+    branches: [ vita ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   psvita:
