--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
+# This is a basic workflow to help you get started with Actions
+
 name: Build Sonic Nexus for Vita
 
+# Controls when the action will run.
+on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ vita ]
@@ -9,6 +13,7 @@ name: Build Sonic Nexus for Vita
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   psvita:
     runs-on: ubuntu-latest
