--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           wget https://github.com/rsn8887/SDL-Vita/releases/download/2.0.8dev_vita_rsn8887_git_20180523/sdl2_vita_20180523.tar.xz
           mkdir -p dependencies/vita/sdl2
-          tar -xf sdl2_vita_20180523.tar.x -C dependencies/vita/sdl2
+          tar -xf sdl2_vita_20180523.tar.xz -C dependencies/vita/sdl2
       - name: Get and compile libtheora
         run: |
           wget https://downloads.xiph.org/releases/theora/libtheora-1.1.1.tar.bz2 && \
