--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: apk add --no-cache make cmake
-      - name: Get SDL2
+      - name: Build SDL2
         run: |
-          wget https://github.com/rsn8887/SDL-Vita/releases/download/2.0.8dev_vita_rsn8887_git_20180523/sdl2_vita_20180523.tar.xz        
-          tar --no-same-owner --no-same-permissions -C $VITASDK/arm-vita-eabi -xJf sdl2_vita_20180523.tar.xz
+          git clone https://github.com/rsn8887/SDL-Vita      
+          cd SDL-Vita
+          git checkout master
+          make -f Makefile.vita
+          sudo -E make -f Makefile.vita install
       - name: Get and compile libtheora
         run: |
           mkdir -p dependencies/vita
