--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build Sonic Nexus for Vita
+name: Build Sonic Nexus
 
 # Controls when the action will run.
 on:
