--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,12 @@ jobs:
         run: apk add --no-cache make cmake git pkgconf
       - name: Build SDL2
         run: |
-          git clone https://github.com/Northfear/SDL     
+          git clone git@github.com:Northfear/SDL.git     
           cd SDL
-          git checkout master
-         cmake -S. -Bbuild -DCMAKE_TOOLCHAIN_FILE=${VITASDK}/share/vita.toolchain.cmake -DCMAKE_BUILD_TYPE=Release -DVIDEO_VITA_VGL=ON
-         cmake --build build -- -j$(nproc)
-         cmake --install build
+          git checkout vitagl
+          cmake -S. -Bbuild -DCMAKE_TOOLCHAIN_FILE=${VITASDK}/share/vita.toolchain.cmake -DCMAKE_BUILD_TYPE=Release -DVIDEO_VITA_VGL=ON
+          cmake --build build -- -j$(nproc)
+          cmake --install build         
       - name: Get and compile libtheora
         run: |
           mkdir -p dependencies/vita
