--- a/Nexus.vita/CMakeLists.txt
+++ b/Nexus.vita/CMakeLists.txt
@@ -29,7 +29,7 @@ set(VITA_APP_NAME "Sonic Nexus")
 # unique string of developer and Y = a unique number for this app
 set(VITA_TITLEID  "RSDK00000")
 # Optional version string to show in LiveArea's more info screen
-set(VITA_VERSION  "01.00")
+set(VITA_VERSION  "01.10")
 
 ## Flags and includes for building
 # Note that we make sure not to overwrite previous flags
@@ -92,8 +92,8 @@ vita_create_self(${PROJECT_NAME}.self ${PROJECT_NAME})
 vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
   VERSION ${VITA_VERSION}
   NAME ${VITA_APP_NAME}
-  # FILE sce_sys/icon0.png sce_sys/icon0.png
-  # FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
-  # FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
-  FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
+  FILE sce_sys/icon0.png sce_sys/icon0.png
+  FILE sce_sys/livearea/contents/bg.png
+  FILE sce_sys/livearea/contents/startup.png
+  FILE sce_sys/livearea/contents/template.xml
 )
