--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-name: Build Sonic Nexus
+name: Build Sonic Nexus for multiple platforms
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - continuous-delivery
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -47,7 +46,49 @@ jobs:
         uses: actions/upload-artifact@v1.0.0  
         with:
           name: Nexus-Windows 
-          path: artifacts      
+          path: artifacts
+  android:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository Android
+        uses: actions/checkout@v2      
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1
+      - name: Download libogg, libvorbis, and libtheora for easier includes
+        run : |
+          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/ogg/libogg-1.3.5.zip" -OutFile "libogg.zip"
+          Expand-Archive -Path libogg.zip -DestinationPath ./dependencies/android/
+          Rename-Item ./dependencies/android/libogg-1.3.5 libogg
+          Invoke-WebRequest -Uri "https://ftp.osuosl.org/pub/xiph/releases/vorbis/libvorbis-1.3.7.zip" -OutFile "libvorbis.zip"
+          Expand-Archive -Path libvorbis.zip -DestinationPath ./dependencies/android/
+          Rename-Item ./dependencies/android/libvorbis-1.3.7 libvorbis
+      - name: Download SDL2
+        run: |
+          Invoke-WebRequest -Uri "https://libsdl.org/release/SDL2-2.0.16.zip" -OutFile "SDL2.zip"
+          Expand-Archive -Path SDL2.zip -DestinationPath ./dependencies/android/
+          Rename-Item ./dependencies/android/SDL2-2.0.16 SDL
+      - name: Download GLEW
+        run: |
+          Invoke-WebRequest -Uri "https://github.com/nigels-com/glew/releases/download/glew-2.2.0/glew-2.2.0-win32.zip" -OutFile "GLEW.zip"
+          Expand-Archive -Path GLEW.zip -DestinationPath ./dependencies/android/
+          Rename-Item ./dependencies/android/glew-2.2.0 glew
+      - name: Move & Copy stuff
+        run: |
+          Copy-Item -Path ./dependencies/android/config_types.h -Destination ./dependencies/android/libogg/include/ogg/
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: 11
+      - name: Build Sonic Nexus Android
+        working-directory: ./android
+        run: |
+          ./gradlew.bat assembleDebug --no-daemon -PABIFILTERS="armeabi-v7a;arm64-v8a"
+      - name: Upload artifact Android
+        uses: actions/upload-artifact@v2
+        with:
+          name: Nexus-android
+          path: ./android/app/build/outputs/apk                
   windows-x64:
     runs-on: windows-2022
     steps:
