--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
-name: NexusCIA
+name: Build Sonic Nexus
 
-on: workflow_dispatch
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ 3ds ]
+  pull_request:
+    branches: [ 3ds ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.issue.number || github.run_id }}
@@ -21,4 +26,9 @@ jobs:
         run : |
           apt install build-essential git libsdl2-dev libvorbis-dev libogg-dev libtheora-dev -y   
       - name: Build Sonic Nexus for the Nintendo 3DS
-        run: make cia Makefile.3ds             
+        run: make -f Makefile.3ds             
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: 3DSX Build
+          path: 'build/build_3ds'        
